refactor: List 자체를 Response로 리턴하도록 수정