@@ -4,6 +4,7 @@ import com.example.solidconnection.common.exception.CustomException;
 import com.example.solidconnection.mentor.domain.Mentor;
 import com.example.solidconnection.mentor.domain.Mentoring;
 import com.example.solidconnection.mentor.dto.MentoringCountResponse;
+import com.example.solidconnection.mentor.dto.MentoringListResponse;
 import com.example.solidconnection.mentor.dto.MentoringResponse;
 import com.example.solidconnection.mentor.repository.MentorRepository;
 import com.example.solidconnection.mentor.repository.MentoringRepository;
@@ -12,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.example.solidconnection.common.exception.ErrorCode.MENTOR_NOT_FOUND;
 
@@ -24,15 +24,16 @@ public class MentoringQueryService {
     private final MentorRepository mentorRepository;
 
     @Transactional(readOnly = true)
-    public List<MentoringResponse> getMentorings(Long siteUserId) {
+    public MentoringListResponse getMentorings(Long siteUserId) {
         Mentor mentor = mentorRepository.findBySiteUserId(siteUserId)
                 .orElseThrow(() -> new CustomException(MENTOR_NOT_FOUND));
 
         List<Mentoring> mentorings = mentoringRepository.findAllByMentorId(mentor.getId());
-
-        return mentorings.stream()
+        List<MentoringResponse> mentoringResponses = mentorings.stream()
                 .map(MentoringResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        return MentoringListResponse.from(mentoringResponses);
     }
 
     @Transactional(readOnly = true)
